@@ -8,6 +8,7 @@
 !/test
 !/tetragono
 !/tetraku
+!/tetraux
 !/tnsp_bridge
 !/vcpkg
 !/.clang-format
